# aoc-py

./: pyproject.toml
aoc/: aoc.py
aoc/days/: __init.py  day01.py  day05.py  day06.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day5.py  day6.py  day7.py  day8.py  day9.py
tests/: test_aoc.py
