[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["nrwrn <nrwrn@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
aoc = "aoc.aoc:root_command"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.12b0"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
